# rpv_platforms-evt-driven-os

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
src/: CMakeLists.txt
src/arch/mb_le/: console.c  crt0.S  crtinit.S  entry.c  prompt.c  target.cmake
src/arch/mb_le/services/: eth_service.c  rtmsure_service.c  sb_service.c  temp_service.c  uart_service.c
src/arch/mb_le/sys/: rsdcard.c  rtmsure.c  rwmon32.c  tsensor.c  xdma.c  xexcept.c  xintc.c  xtemac.c  xtemac_phy.c  xuart.c
src/arch/mc_avr/: prompt.c  target.cmake  uart.c
src/arch/mc_avr/services/: uart_service.c
src/arch/x86_64/: entry.c  pata.c  prompt.c  std.c  target.cmake
src/arch/x86_64/sys/: CMakeLists.txt  isrs.asm  lapic.asm  pata.asm  stack.asm
src/arch/x86_64/sys/boot/: main32.asm
src/fatfs/: diskio.c  fat.c  fatfs.cmake  ffconf.h.in
src/include/mb_le/: eth_c.h  tty.h
src/include/mb_le/sys/: rsdcard.h  rtmsure.h  tsensor.h  xcache.h  xdma.h  xintc.h  xtemac.h  xtemac_phy.h  xuart.h
src/include/mc_avr/config/: mcu_config.h
src/include/x86_64/: print.h
src/kernel/: CMakeLists.txt  entry.c  kernel.c  keyb.c  memory.c  print.c
src/kernel/arch/: keyb.c  memory.c
src/kernel/arch/fatfs/: diskio.c  fat.c  fatfs.cmake  ffconf.h.in
src/kernel/arch/mb_le/: console.c  crt0.S  crtinit.S  entry.c  storage.c  sys.S  target.cmake  tty.c
src/kernel/arch/mb_le/services/: keyb_service.c  rtmsure_service.c  sb_service.c
src/kernel/arch/mb_le/sys/: rsdcard.c  xcache.c  xdma.c  xuart.c
src/kernel/arch/mc_avr/: entry.c  prompt.c  target.cmake  tty.c  uart.c
src/kernel/arch/mc_avr/services/: uart_service.c
src/kernel/arch/microchip_avr/: block_dev.c  console.c  entry.c  fat.c  memory.c  target.cmake
src/kernel/arch/x86/: console.c  entry.c  ide.c  keyb.c  memory.c  print.c
src/kernel/arch/x86_64/: entry.c  ide.c  keyb.c  print.c  target.cmake
src/kernel/arch/x86_64/sys/boot/: gdt64.asm
src/kernel/core/: kernel.c  kernel.cmake  kernel_cmd.c  kernel_fio.c  kernel_fsh.c  kernel_journal.c  kernel_jrnl.c  kernel_mon.c  kernel_shell.c  kernel_std.c  kernel_stdio.c  kernel_svc.c  service_host.c
src/kernel/core/commands/: cls.c  rmon.c  svc.c  ver.c
src/kernel/core/commands/journal/: sysj.c
src/kernel/core/commands/storage/: cd.c  cp.c  dir.c  disks.c  dsk_block.c  mkdir.c  read_disk.c  rm.c  type.c
src/kernel/include/: command.h  console.h  disk.h  diskio.h  events.h  fat.h  monitor.h  print.h  prompt.h  service.h  shell.h  version.h
src/kernel/include/arch/mb_le/sys/: rsdcard.h  xcache.h  xdma.h
src/kernel/include/arch/mc_avr/: uart.h
src/kernel/include/core/: kernel.h  kernel_conf.h.in  kernel_context.h  kernel_events_aggregate.h  kernel_exec.h  kernel_fio.h  kernel_fsh.h  kernel_journal.h  kernel_jrnl.h  kernel_sevice.h  kernel_signal.h  kernel_stdio.h
src/kernel/include/core/private/: command.h  command_stack.h  service.h  shell_cmd.h
src/kernel/include/services/: events_service.h  kernel_sevice.h  kernel_svchost.h  service_host.h
src/kernel/include/stdc/: string.h
src/kernel/include/utils/: copy.h  cp.h  type.h
src/kernel/scripts/: kernel-mb_le-linker.ld  kernel-mc_avr5-linker.ld  kernel-x86_64-linker.ld
src/kernel/utils/: cp.c  type.c
src/scripts/: kernel-mc_avr5-linker.ld  kernel-x86_64-linker.ld
src/x86_64/: CMakeLists.txt  apic.asm  entry.c  ide.asm  idt64.asm  ioapic.asm  irqs_excepts.asm  isr.asm  isrs.asm  kernel-linker.ld  lapic.asm  memory.asm  page_tables.asm  ps2_controller.asm  text_hwcursor.asm  vga_text_hwcursor.asm
src/x86_64/boot/: header.asm  main.asm  main32.asm  main64.asm  page_tables.asm  stack.asm
targets/x86_64/iso/boot/grub/: grub.cfg
tools/cmake/: avr-mcu.cmake  avr-mcu_programmer.cmake  gcc-avr-toolchain.cmake  gcc-elf-utils.cmake  gcc-microblaze-toolchain.cmake  gcc-x86_64-elf-nasm-toolchain.cmake  gcc-x86_64-elf-utils.cmake  kernel-x86_64-iso.cmake  qemu-x86_64-gdb.cmake  qemu-x86_64-simul.cmake
